refactor: Build